# rust-rocket-api-sample

./: .env  Cargo.toml  README.md  docker-compose.yml
docker/rust/: Dockerfile
env/: .env.docker
migrations/2021-01-11-143158_create_table_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs
src/models/: user.rs
src/routes/: index.rs  users.rs
