[package]
name = "rust-rocket-api-sample"
version = "0.1.0"
authors = ["akakuma73"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.118", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
